Remove useless class specifically used for states // start to bypass lib class and removing all those static // UPD readme

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <p><a href="templates/display.php">Generator ⭐️</a></p>
         <p><a href="templates/list.php">List</a></p>
     <h2>3 states</h2>
-        <p><a href="templates/display_3states.php">Generator</a></p>
-        <p><a href="templates/list_3states.php">List</a></p>
+        <p><a href="templates/display3.php">Generator</a></p>
+        <p><a href="templates/list3.php">List</a></p>
     <h2>4 states</h2>
-        <p><a href="templates/display_4states.php">Generator</a></p>
-        <p><a href="templates/list_4states.php">List</a></p>
+        <p><a href="templates/display4.php">Generator</a></p>
+        <p><a href="templates/list4.php">List</a></p>
     </main>
 
     
