--- a/index.html
+++ b/index.html
@@ -19,14 +19,9 @@
     <main>
 
     <h2>2 states</h2>
-        <p><a href="templates/display.php">Generator ⭐️</a></p>
+        <p><a href="templates/generator.php">Generator ⭐️</a></p>
         <p><a href="templates/list.php">List</a></p>
-    <h2>3 states</h2>
-        <p><a href="templates/display3.php">Generator</a></p>
-        <p><a href="templates/list3.php">List</a></p>
-    <h2>4 states</h2>
-        <p><a href="templates/display4.php">Generator</a></p>
-        <p><a href="templates/list4.php">List</a></p>
+        <p><a href="text.php">(as text)</a></p>
     </main>
 
 </body>
