refacto(2nd order): move files in app, refacto public files, more options on list pages // Clean 2nd order calculations

--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
 <head>
     <meta charset="utf-8">
     <title>cellular automata</title>
-    <link href="templates/style.css" rel="stylesheet" type="text/css">
+    <link href="app/public/style.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="icon" type="image/png" href="/data/favicon.png">
+    <link rel="icon" type="image/png" href="/app/public/img/favicon.png">
 </head>
 
 <body>
 
     <nav>
         <h1>elementary <br />cellular <br />automata</h1>
-        <h1> pattern<br>generator </h1>
+        <h1>pattern<br>generator </h1>
     </nav>
 
     <main>
 
     <h2>2 states</h2>
-        <p><a href="templates/generator.php">Generator ⭐️</a></p>
-        <p><a href="templates/list.php">List</a></p>
-        <p><a href="text.php">(as text)</a></p>
+        <p><a href="app/public/generator.php">Generator ⭐️</a></p>
+        <p><a href="app/public/list.php">List</a></p>
+        <p><a href="app/text.php">(as text)</a></p>
     </main>
 
 </body>
