feat: Update README for 2nd order + add structured data

--- a/index.html
+++ b/index.html
@@ -3,26 +3,36 @@
 
 <head>
     <meta charset="utf-8">
-    <title>cellular automata</title>
+    <title>cellular automata generator</title>
     <link href="app/public/style.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="description" content="An cellular automata generator, with order 1 or 2, and 2 to 9 states">
     <link rel="icon" type="image/png" href="/app/public/img/favicon.png">
+
+    <script type="application/ld+json">
+    {
+        "@context": "http://schema.org",
+        "@type": "Website",
+        "name": "Cellular automata image|text generator, from 2+ states, order 1 or 2",
+        "url": "https://www.eliseduverdier.fr/cellular_automata",
+    }
+    </script>
 </head>
 
 <body>
 
-    <nav>
-        <h1>elementary <br />cellular <br />automata</h1>
-        <h1>pattern<br>generator </h1>
-    </nav>
+<nav>
+    <h1>elementary <br/>cellular <br/>automata</h1>
+    <h1>pattern<br>generator </h1>
+</nav>
 
-    <main>
+<main>
 
     <h2>2 states</h2>
-        <p><a href="app/public/generator.php">Generator ⭐️</a></p>
-        <p><a href="app/public/list.php">List</a></p>
-        <p><a href="app/text.php">(as text)</a></p>
-    </main>
+    <p><a href="app/public/generator.php">Generator ⭐️</a></p>
+    <p><a href="app/public/list.php">List</a></p>
+    <p><a href="app/text.php">(as text)</a></p>
+</main>
 
 </body>
 </html>
