feat(templates): remove link to list (too hard on server)

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="utf-8">
     <title>cellular automata generator</title>
     <link href="app/public/style.css" rel="stylesheet" type="text/css">
+
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="An cellular automata generator, with order 1 or 2, and 2 to 9 states">
+    <meta http-equiv="refresh" content="0;URL='app/public/generator.php'" />
+
     <link rel="icon" type="image/png" href="/app/public/img/favicon.png">
 
     <script type="application/ld+json">
@@ -29,8 +32,8 @@
 <main>
 
     <h2>2 states</h2>
+
     <p><a href="app/public/generator.php">Generator ⭐️</a></p>
-    <p><a href="app/public/list.php">List</a></p>
     <p><a href="app/text.php">(as text)</a></p>
 </main>
 
