feat(✨): new UI

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8">
     <title>cellular automata generator</title>
-    <link href="app/public/style.css" rel="stylesheet" type="text/css">
+    <link href="app/public/style_v3.css" rel="stylesheet" type="text/css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="An cellular automata generator, with order 1 or 2, and 2 to 9 states">
-    <meta http-equiv="refresh" content="0;URL='app/public/generator.php'" />
+    <meta http-equiv="refresh" content="0;URL='app/public/generator.html'" />
 
     <link rel="icon" type="image/png" href="/app/public/img/favicon.png">
 
@@ -24,18 +24,16 @@
 
 <body>
 
-<nav>
-    <h1>elementary <br/>cellular <br/>automata</h1>
-    <h1>pattern<br>generator </h1>
-</nav>
+    <nav>
+        <h1>elementary <br />cellular <br />automata</h1>
+        <h1>pattern<br>generator </h1>
+    </nav>
 
-<main>
-
-    <h2>2 states</h2>
-
-    <p><a href="app/public/generator.php">Generator ⭐️</a></p>
-    <p><a href="app/text.php">(as text)</a></p>
-</main>
+    <main>
+        <p><a href="app/public/generator.html">Generator ⭐️</a></p>
+        <p><a href="app/text.php">(as text)</a></p>
+    </main>
 
 </body>
+
 </html>
